--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.4.3",
-    "vue-toastification": "^1.7.7"
+    "vue-sweetalert2": "^3.0.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
